[package]
name = "virgin_router_api"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.6.0"
ccm = "0.3.0"
cipher = "0.4.3"
data-encoding = "2.3.2"
regex = "1.5.6"
reqwest = { version="0.11.10", features=["json"] }
ring = "0.16.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1", features = ["full"] }

